--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,15 @@ on: [push, pull_request]
 
 jobs:
   test:
+    runs-on: ubuntu-latest
     container:
       image: node
-    before:
-      runs-on: ubuntu-latest
-      steps:
-        - run: echo "before"
+      before:
+        environment: ECR
+        runs-on: ubuntu-latest
+        steps:
+          - name: Login to Amazon ECR
+            id: login-ecr
+            uses: aws-actions/amazon-ecr-login@v1
     steps:
       - run: echo "Inside node"
