--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
             id: login-ecr
             uses: aws-actions/amazon-ecr-login@v1
     steps:
-      - run: echo "Inside node"
+      - run: echo "Inside node 222"
